Various corrections concerning the completion of the documentation

--- a/doc/inc/10_introduction.tex
+++ b/doc/inc/10_introduction.tex
@@ -12,10 +12,10 @@ eine zweidimensionale Fläche. In der Regel ist die Ausgabe auf einen
 zweidimensionalen Raum beschränkt.
 
 Bei der Ausgabe wird zwischen statischen und dynamischen Bildern
-unterschieden. Während statische Bilder sich nicht ändern, können sich
-dynamische Bilder ständig ändern. Aus anatomischen Begebenheiten des
-menschlichen Auges muss die Bildfolge mindestens 25 Bilder pro Sekunde
-betragen.
+unterschieden. Während statische Bilder konstant sind, können sich
+dynamische Bilder ständig ändern. Aufgrund der Reaktionszeiten des
+menschlichen Auges müssen für eine ruckfreie Darstellung mindestens 25
+Bilder pro Sekunde berechnet werden.
 Das Fachgebiet ``Computergrafik'' war schon immer bestrebt eine
 möglichst realitätsnahe Darstellung zu erhalten. Eine Darstellung, die
 möglichst nahe an der menschlichen Wahrnehmung liegt.
