--- a/doc/inc/50/51_illumination_models.tex
+++ b/doc/inc/50/51_illumination_models.tex
@@ -5,7 +5,7 @@
 \section{Beleuchtungsmodelle}
 \label{sec:illumination_models}
 
-Sofern nicht anders vermerkt, basiert der folgende Abschnitt
+Sofern im Text nicht anders vermerkt, basiert der folgende Abschnitt
 auf~\cite[S. 343]{whitted_improved_1980}, sowie
 auf~\cite{hughes_computer_2013}.
 
@@ -22,7 +22,8 @@ das Licht als Funktion in Abhängigkeit folgender Faktoren beschrieben:
     \item Globale Umgebung
 \end{itemize}
 
-Es wird dabei zwischen lokalen und globalen Belechtungsmodellen unterschieden.
+Dabei wird zwischen lokalen und globalen Belechtungsmodellen
+unterschieden.
 
 \input{inc/50/51/local_illum_models}
 \input{inc/50/51/global_illum_models}
