--- a/doc/inc/60/63/lighting_model.tex
+++ b/doc/inc/60/63/lighting_model.tex
@@ -1,10 +1,15 @@
+% -*- coding: UTF-8 -*-
+% vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
+% chktex-file 27 - disable warning about missing include files
+
 \subsection{Beleuchtungsmodell}
 \label{sec:rendering_implicit_surfaces_lighting}
 
-Um implizite Oberflächen darstellen zu können, ist es notwendig ein
-Beleuchtungsmodell zu wählen. Ansonsten wäre das dargestellte Bild nur
-schwarz.  Der Einfachheit halber wird im Rahmen dieser Projektarbeit das
-in~\autoref{subsec:local_illumination_models} vorgestellte
+Um implizite Oberflächen darstellen zu können, muss ein
+Beleuchtungsmodell gewählt werden. Andernfalls wäre  das dargestellte
+Bild nur schwarz. Zur Vereinfachung wird im Rahmen dieser Projektarbeit
+das in~\autoref{subsec:local_illumination_models} vorgestellte
 Phong-Beleuchtungsmodell verwendet.
 
 Daher wird die resultierende Farbe eines Punktes im Raum $I(\bm{x})$ aus
