--- a/doc/inc/60/63_rendering_implicit_surfaces.tex
+++ b/doc/inc/60/63_rendering_implicit_surfaces.tex
@@ -1,16 +1,17 @@
 % -*- coding: UTF-8 -*-
 % vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
 % chktex-file 27 - disable warning about missing include files
 
 \section{Rendering von impliziten Oberflächen}
 \label{sec:rendering_implicit_surfaces}
 
 Nachdem in den vorherigen Abschnitten Methoden zur Modellierung von
-impliziten Oberflächen behandelt wurden, zeigt folgendes Kapitel wie
-implizite Oberflächen gerendert werden
-können.~\citeauthor{foley_computer_1996} beschreibt Rendering
-als Erstellung von Bildern ausgehend von
-Modellen~\parencite[S. 606]{foley_computer_1996}.
+impliziten Oberflächen behandelt wurden, beschreibt das folgende Kapitel
+wie implizite Oberflächen gerendert werden
+können.~\citeauthor{foley_computer_1996} beschreibt Rendering als
+Erstellung von Bildern ausgehend von Modellen~\parencite[S.
+606]{foley_computer_1996}.
 
 \input{inc/60/63/lighting_model.tex}
 \input{inc/60/63/rendering.tex}
