--- a/doc/inc/70/components.tex
+++ b/doc/inc/70/components.tex
@@ -1,3 +1,8 @@
+% -*- coding: UTF-8 -*-
+% vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
+% chktex-file 27 - disable warning about missing include files
+
 Details der einzelnen Komponenten finden sich in der nachfolgenden Tabelle.
 
 % Sigh..
