--- a/doc/inc/80_conclusion.tex
+++ b/doc/inc/80_conclusion.tex
@@ -1,14 +1,15 @@
 % -*- coding: UTF-8 -*-
 % vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
 % chktex-file 27 - disable warning about missing include files
 
 \chapter{Schlusswort}
 \label{chap:discussion_and_conclusion}
 
-In dieser Projektarbeit wurde mit Sphere Tracing eine Methode
-vorgestellt, bei welcher es sich um eine optimierte Variante von dem als
-Ray Tracing bekannten Verfahren handelt. Diese erlaubt die Darstellung
-von Szenen analog dem Ray Tracing Verfahren, aber in Echtzeit.
+In dieser Projektarbeit wurde Sphere Tracing vorgestellt. Es ist eine
+optimierte Variante des als Ray Tracing bekannten Verfahrens.  Sphere
+Tracing erlaubt die Darstellung von Szenen in der Qualität von Ray
+Tracing, aber in Echtzeit.
 
 Zuerst wurden \textit{lokale}, dann \textit{globale Beleuchtungsmodelle} inklusive der
 \textit{Renderinggleichung} vorgestellt. Weiter wurde das \textit{Ray Tracing}
@@ -16,10 +17,9 @@ Verfahren ausgehend von der ursprünglichen Idee des Ray Tracings, ein
 als \textit{Ray Casting} bekanntes Verfahren, vorgestellt. Dabei wurde auch die
 zugrundeliegende Physik vereinfacht aufgezeigt.
 
-Für die Anwendung der Beleuchtungsmodelle in einem praktischen Sinne, so
-dass eine Szene auf dem Bildschirm sichtbar wird, wurden die klassischen
-Modelle zur Schattierung \textit{Flat-Shading}, \textit{Gouraud-Shading}
-sowie \textit{Phong-Shading} vorgestellt.
+Für die praktische Anwendung der Beleuchtungsmodelle wurden die
+klassischen Modelle zur Schattierung \textit{Flat-Shading},
+\textit{Gouraud-Shading} sowie \textit{Phong-Shading} vorgestellt.
 
 Um die eigentliche Szene darstellen zu können,
 wurden~\textit{Oberflächen} im Allgemeinen eingeführt. Dabei wurde
@@ -30,16 +30,16 @@ Modellierung bzw.\ Darstellung. Es wurden dann \textit{implizite
 \textit{Distanzfunktionen} wurde eine Grundlage zur Berechnung von
 Distanzen gezeigt, welche der späteren Modellierung und Darstellung
 dient. Ausgehend von den Distanzfunktionen wurden schliesslich
-\textit{Distanzfelder} vorgestellt, eine Art Datenstruktur basierend auf
+\textit{Distanzfelder} beschrieben, eine Art Datenstruktur basierend auf
 den Distanzfunktionen.
 
 Mit \textit{Ray Marching} und \textit{Sphere Tracing} wurden zwei
 Methoden zur Darstellung von impliziten Oberflächen aufgezeigt. Weiter
 wurden \textit{Operationen für implizite Oberflächen}, wie
-beispielsweise die Vereinigung oder Subtraktion, vorgestellt sowie
-Funktionen zur Modellierung von \textit{geometrischen Primitiven}.
+beispielsweise die Vereinigung oder Subtraktion, sowie Funktionen zur
+Modellierung von \textit{geometrischen Primitiven} vorgestellt.
 
-Es wurde schliesslich gezeigt, wie die vorgestellten Grundlagen für das
+Schliesslich wurde gezeigt, wie die vorgestellten Grundlagen für das
 Rendering von impliziten Oberflächen genutzt werden können.
 
 Im letzten Abschnitt wurde der umgesetzte \textit{Prototyp} vorgestellt,
