--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -101,7 +101,7 @@ Abgerufen am 27. September 2015}
 	title = {Sphere {Tracing}: {A} {Geometric} {Method} for the {Antialiased} {Ray} {Tracing} of {Implicit} {Surfaces}},
 	volume = {12},
 	journal = {The Visual Computer},
-	author = {Hart, John C.},
+	author = {Hart, John},
 	year = {1994},
 	pages = {527--545}
 }
@@ -118,7 +118,7 @@ Abgerufen am 27. September 2015}
 @article{hart_ray_1993,
 	title = {Ray tracing implicit surfaces},
 	journal = {Siggraph 93 Course Notes: Design, Visualization and Animation of Implicit Surfaces},
-	author = {Hart, John C},
+	author = {Hart, John},
 	year = {1993},
 	pages = {1--16}
 }
