--- a/doc/inc/60/63/rendering.tex
+++ b/doc/inc/60/63/rendering.tex
@@ -1,3 +1,8 @@
+% -*- coding: UTF-8 -*-
+% vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
+% chktex-file 27 - disable warning about missing include files
+
 \subsection{Rendering}
 \label{sec:rendering_implicit_surfaces_Rendering}
 
