--- a/doc/inc/80/further_work.tex
+++ b/doc/inc/80/further_work.tex
@@ -1,18 +1,22 @@
+% -*- coding: UTF-8 -*-
+% vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% vim: spelllang=de spell
+% chktex-file 27 - disable warning about missing include files
+
 \section{Erweiterungsmöglichkeiten}
 \label{sec:further_work}
 
-Da diese Projektarbeit einen begrenzten Zeitrahmen von einem Semester
-hat, konnten nicht alle gewünschten Thematiken bearbeitet werden.
+Da diese Projektarbeit den begrenzten Zeitrahmen eines Semesters
+hat, konnten nicht alle von mir gewünschten Themata bearbeitet werden.
 
-Zudem handelt es sich bei Sphere Tracing um ein relativ junges
-Verfahren, welches noch über viel Potential für Forschung und
-Entwicklung verfügt. Da es sich zudem um ein grosses Themengebiet
-handelt, kann hier auch entsprechend viel Zeit investiert werden.
+Bei Sphere Tracing handelt es sich um ein relativ junges
+Verfahren, welches ein grosses Potential für Forschung und
+Entwicklung enthält. Angesichts des grossen Themengebietes kann man viel
+Zeit investieren.
 
-Einige, der während der Recherche aufgekommenen, aber nicht bearbeiteten
-Thematiken werden nachfolgend aufgezeigt. Sie zeigen auf, in welche
-Richtung eine Weiterführung der Projektarbeit und des Prototypen gehen
-kann.
+Während der Recherche sind einige Thematiken hinzugekommen, sie werden
+aber nicht bearbeitet. Sie zeigen auf, in welche Richtung die
+Weiterführung von Projektarbeit und Prototyp gehen kann.
 
 \subsection{Umgebungs-Verdeckung (Ambient Occlusion)}
 \label{subsec:further_work:ambient_occlusion}
@@ -28,7 +32,7 @@ können.''~\parencite{wikipedia_the_free_encyclopedia_umgebungsverdeckung_2015}
 \citeauthor{evans_fast_2006} liefert in seiner
 Arbeit~\citetitle{evans_fast_2006} interessante Ansätze, wie die
 Umgebungsverdeckung auf Distanzfelder angewendet werden kann. Dies kann
-so wohl mit relativ wenig Aufwand auch für Sphere Tracing angewendet
+mit relativ wenig Aufwand auch für Sphere Tracing angewendet
 werden~\parencite{evans_fast_2006}.
 
 \subsection{Kantenglättung}
@@ -40,24 +44,24 @@ zu harten Übergängen und Artefakten --- es tritt das so genannte
 
 \citeauthor{hart_sphere_1994} schlägt in~\citetitle{hart_sphere_1994}
 bereits Verfahren zur Kantenglättung vor. Diese verkomplizieren jedoch
-den Rendering-Prozess und haben schwächen im Umgang mit angenäherten
+den Rendering-Prozess und haben Schwächen im Umgang mit angenäherten
 Obergrenzen von impliziten Oberflächen.
 
 \citeauthor{lottes_fxaa_2009} schlägt in seiner
 Arbeit~\citetitle{lottes_fxaa_2009} eine einfache Lösung dieser
-Problematiken vor. Es handelt sich dabei um einen Bild-Filter, welcher
+Problematiken vor. Es handelt sich um einen Bild-Filter, welcher
 typischerweise in der Nachbearbeitung eines Bildes zum Einsatz kommt.
-Der Filter wird auf das gerenderte Bild (bzw.\ auf einen Bild-Puffer)
-angewendet. Es handelt sich dabei um ein Verfahren, welches auf der
+Der Filter wird auf das gerenderte Bild (bzw.\ auf einem Bild-Puffer)
+angewendet. Es handelt sich um ein Verfahren, welches auf der
 Detektion von Kanten basiert~\parencite{lottes_fxaa_2009}.
 
 \subsection{Realistische Materialien}
 \label{subsec:further_work:brdf}
 
 In~\autoref{subsec:ray_tracing} werden Verfahren zur Berechnung der
-physikalischen Eigenschaften von Oberflächen und damit Materialien
+physikalischen Eigenschaften von Oberflächen und damit von Materialien
 aufgezeigt. Dabei handelt es sich aber nur um Näherungen unter Annahme
-von perfekten Bedingungen, was weit entfernt von der Realität ist.
+von perfekten Bedingungen, was von der Realität weit entfernt ist.
 
 Eine allgemeinere und daher realistischerer Form ist die so genannte
 BRDF:\ ``Eine bidirektionale Reflektanzverteilungsfunktion (engl.
@@ -78,15 +82,15 @@ dar.''~\parencite{wikipedia_the_free_encyclopedia_bidirektionale_2014}
 mit~\citetitle{burley_physicall-based_2012} eine gute Übersicht,
 wie solche Verfahren umgesetzt werden
 können~\parencite{burley_physicall-based_2012}.
-\citeauthor{bagher_accurate_2012} bietet
+\citeauthor{bagher_accurate_2012} bieten
 in~\citetitle{bagher_accurate_2012} eine Fülle an Materialien und
 Eigenschaften~\parencite{bagher_accurate_2012}.
 
 \subsection{Optimierungsverfahren}
 \label{subsec:further_work:optimisation}
 
-Zur Beschleunigung das Sphere Tracing Verfahrens existieren diverse
-Verfahren. So stellen z.B.~\citeauthor{keinert_enhanced_2014}
+Zur Beschleunigung des Sphere Tracing Verfahrens existieren diverse
+Möglichkeiten. So stellen z.B.~\citeauthor{keinert_enhanced_2014}
 in~\citetitle{keinert_enhanced_2014} diverse Methoden zur
 Optimierung und Beschleunigung des Renderings sowie Methoden zum Finden
 von Schnittpunkten vor~\parencite{keinert_enhanced_2014}.~\citeauthor{seven_rendering_2012} stellt
